[build-system]
requires = ["setuptools >= 64.0", 
            "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "ospgrid"
dynamic = ["version"]
description = "2D grid analysis wrapper for OpenSeesPy"
license = {text = "GNU General Public License v3.0"}
keywords = ["grid","finite element","bridge"]
authors = [{name = "Colin Caprani", email = "colin.caprani@monash.edu"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy",
    "openseespy>=3.3",
    "opsvis>=1.0.12",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://ccaprani.github.io/ospgrid/"
Documentation = "https://ccaprani.github.io/ospgrid/"
Source = "https://github.com/ccaprani/ospgrid/"
Tracker = "https://github.com/ccaprani/ospgrid/issues/"

[project.optional-dependencies]
test = ["pytest >= 6.2.2"]

[tool.setuptools]
platforms = ["any"]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = {attr = "ospgrid.__version__"}

[tool.distutils.bdist_wheel]
universal = 1

[tool.aliases]
test = "pytest"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]

