[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ospgrid"
version = "0.6.0"
description = "2D grid analysis wrapper for OpenSeesPy"
license = {text = "GNU General Public License v3.0"}
keywords = ["grid","finite element","bridge"]
authors = [{name = "Colin Caprani", email = "colin.caprani@monash.edu"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "Pillow",
    "openseespy>=3.3",
    "opsvis>=1.0.12",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://ccaprani.github.io/ospgrid/"
Documentation = "https://ccaprani.github.io/ospgrid/"
Source = "https://github.com/ccaprani/ospgrid/"
Tracker = "https://github.com/ccaprani/ospgrid/issues/"

[project.optional-dependencies]
test = ["pytest >= 7.0", "pytest-cov >= 4.0"]  # pytest-cov for local coverage checks

[tool.setuptools]
platforms = ["any"]
include-package-data = true
license-files = ["LICENSE"]

[tool.aliases]
test = "pytest"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]

