[metadata]
name = ospgrid
version = attr: ospgrid.__version__
description = 2D grid analysis wrapper for OpenSeesPy
url = https://ccaprani.github.io/ospgrid/
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3.0
license_file = LICENSE
keyword = grid, finite element
author = Colin Caprani
author_email = colin.caprani@monash.edu
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering
    Environment :: Console
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls = 
    Documentation = https://ccaprani.github.io/ospgrid/
    Source =  https://github.com/ccaprani/ospgrid/
    Tracker = https://github.com/ccaprani/ospgrid/issues/

[options]
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.8
setup_requires =
    setuptools
install_requires = 
    matplotlib
    numpy
    scipy

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.extras_require]
test =
    pytest >= 6.2.2

